<resources>
    <string name="app_name">Mulaqat</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="join_free">Join free</string>
    <string name="services">Services</string>
    <string name="pricing">Pricing</string>
    <string name="event">Event</string>
    <string name="schedule">Schedule</string>
    <string name="notifications">Notifications</string>
    <string name="blog">Blog</string>
    <string name="login">Login</string>
    <string name="drawer_open">Open Drawer Menu</string>
    <string name="drawer_close">Close Drawer Menu</string>
    <string name="home_url">https://www.mulaqat.app/index.php</string>
    <string name="messages">Messages</string>
    <string name="event_url">https://www.mulaqat.app/events.php</string>
    <string name="schedule_url">https://www.mulaqat.app/schedule.php</string>
    <string name="_1_844_mulaquat">1-844-MULAQUAT</string>
    <string name="_844_685_2728">(844) 685-2728</string>
    <string name="all_rights_reserved">All rights reserved.</string>
    <string name="copyright_mulaquat_inc">Copyright @ Mulaquat, Inc</string>
    <string name="email_address">Email Address</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="free_signup">Free Signup</string>
    <string name="email_is_required">Email is required</string>
    <string name="email_is_invalid">Email is invalid</string>
    <string name="password_is_required">Password is required</string>
    <string name="free_join_mulaquat_today">Free Join Mulaquat Today</string>
    <string name="signup_des">Download the app or sign up now to start your journey toward real, face-to-face connections. Because the right match deserves more than a swipe—it deserves a Mulaqat.</string>
    <string name="full_name">Full name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="contact_number">Contact Number</string>
    <string name="email">Email</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zipcode">ZipCode</string>
    <string name="additional_notes_or_requests">Additional Notes or Requests</string>
    <string name="browse_upload_photos">Browse (Upload Photos)</string>
    <string name="submit">Submit</string>
    <string name="message">Message</string>
    <string name="no_messages_yet">No Messages yet</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="no_notifications">No Notifications</string>
    <string name="search_url">http://www.mulaqat.app/search.php</string>
    <string name="blog_url">https://mulaqat.app/blog/</string>
    <string name="united_states">United States</string>
    <string name="permission_access_device_image_denied">Permission Access Device Image denied</string>
    <string name="permission_access_camera_denied">Permission access camera denied</string>
    <string name="name_is_required">Name is required</string>
    <string name="age_is_required">Age is required</string>
    <string name="contact_number_is_required">Contact Number is required</string>
    <string name="city_is_required">City is required</string>
    <string name="state_is_required">State is required</string>
    <string name="zipcode_is_required">ZipCode is required</string>
    <string name="photo_is_required">Photo is required</string>
</resources>
