<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.auth.SignIn"
    android:orientation="vertical"
    android:background="@color/white"
    android:fitsSystemWindows="true">
    <RelativeLayout
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginHorizontal="@dimen/dp_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_centerVertical="true"
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            android:id="@+id/bt_back"
            android:src="@drawable/ic_back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/login"
            android:textSize="@dimen/sp_18"
            android:textColor="@color/red"
            android:fontFamily="@font/inter_semibold"
            android:textAllCaps="true"/>
    </RelativeLayout>
    <ImageView
        android:layout_marginTop="@dimen/dp_10"
        android:layout_gravity="center_horizontal"
        android:id="@+id/iv_logo"
        android:layout_width="@dimen/dp_150"
        android:layout_height="@dimen/dp_60"
        android:src="@drawable/img_logo"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        android:textColor="@color/black"
        android:fontFamily="@font/inter_medium"
        android:textSize="@dimen/sp_12"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_25"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="@dimen/dp_5"
        android:background="@drawable/bg_et"
        android:layout_marginHorizontal="@dimen/dp_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="clear_text"
        app:hintEnabled="false">
        <com.google.android.material.textfield.TextInputEditText
            android:singleLine="true"
            android:id="@+id/et_email"
            android:textSize="@dimen/sp_14"
            android:padding="@dimen/dp_10"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:fontFamily="@font/inter_regular"
            android:hint="@string/enter_email_address"
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            android:layout_height="@dimen/dp_50"
            android:background="@android:color/transparent"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/black"
        android:fontFamily="@font/inter_medium"
        android:textSize="@dimen/sp_12"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_15"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="@dimen/dp_5"
        android:background="@drawable/bg_et"
        android:layout_marginHorizontal="@dimen/dp_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle"
        app:hintEnabled="false">
        <com.google.android.material.textfield.TextInputEditText
            android:singleLine="true"
            android:inputType="textPassword"
            android:id="@+id/et_pw"
            android:textSize="@dimen/sp_14"
            android:padding="@dimen/dp_10"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:fontFamily="@font/inter_regular"
            android:hint="@string/enter_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:background="@android:color/transparent"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/red"
        android:fontFamily="@font/inter_medium"
        android:textSize="@dimen/sp_12"
        android:layout_marginEnd="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_15"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/bt_login"
        android:layout_marginTop="@dimen/dp_25"
        android:layout_marginHorizontal="@dimen/dp_15"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        app:cardCornerRadius="@dimen/dp_10"
        app:cardElevation="0dp">
        <RelativeLayout
            android:background="@drawable/bg_bt"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textAllCaps="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/white"
                android:fontFamily="@font/inter_semibold"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_marginTop="@dimen/dp_15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/grey"
            android:fontFamily="@font/inter_medium"
            android:textSize="@dimen/sp_12"
            />
        <TextView
            android:id="@+id/tv_to_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/free_signup"
            android:layout_marginStart="@dimen/dp_5"
            android:textColor="@color/red"
            android:fontFamily="@font/inter_semibold"
            android:textSize="@dimen/sp_12"
            />
    </LinearLayout>
</LinearLayout>