<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.auth.SignUp"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    android:scrollbars="none">
    <LinearLayout
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginHorizontal="@dimen/dp_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            android:id="@+id/bt_back"
            android:src="@drawable/ic_back"/>
        <ImageView
            android:layout_marginTop="@dimen/dp_10"
            android:layout_gravity="center_horizontal"
            android:id="@+id/iv_logo"
            android:layout_width="@dimen/dp_150"
            android:layout_height="@dimen/dp_60"
            android:src="@drawable/img_logo"/>
        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/free_join_mulaquat_today"
            android:textSize="@dimen/sp_18"
            android:textColor="@color/red"
            android:fontFamily="@font/inter_semibold"
            android:textAllCaps="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_des"
            android:textColor="@color/black"
            android:fontFamily="@font/inter_medium"
            android:textSize="@dimen/sp_12"
            android:layout_marginTop="@dimen/dp_25"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:textColor="@color/black"
            android:fontFamily="@font/inter_medium"
            android:textSize="@dimen/sp_12"
            android:layout_marginTop="@dimen/dp_25"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/dp_5"
            android:background="@drawable/bg_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            app:hintEnabled="false">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:textSize="@dimen/sp_14"
                android:padding="@dimen/dp_10"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/full_name"
                android:layout_width="match_parent"
                android:inputType="textCapWords"
                android:layout_height="@dimen/dp_45"
                android:background="@android:color/transparent"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textColor="@color/black"
            android:fontFamily="@font/inter_medium"
            android:textSize="@dimen/sp_12"
            android:layout_marginTop="@dimen/dp_15"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/dp_5"
            android:background="@drawable/bg_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            app:hintEnabled="false">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_age"
                android:textSize="@dimen/sp_14"
                android:padding="@dimen/dp_10"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:fontFamily="@font/inter_regular"
                android:inputType="number"
                android:digits="0123456789"
                android:hint="@string/age"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:background="@android:color/transparent"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textColor="@color/black"
            android:fontFamily="@font/inter_medium"
            android:textSize="@dimen/sp_12"
            android:layout_marginTop="@dimen/dp_15"/>
        <RadioGroup
            android:layout_marginTop="@dimen/dp_5"
            android:id="@+id/rg_gender"
            android:checkedButton="@id/rb_male"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/rb_male"
                android:paddingStart="@dimen/dp_6"
                android:textColor="@color/black"
                android:text="@string/male"
                android:textSize="@dimen/sp_15"
                android:fontFamily="@font/inter_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/cb_selector"/>
            <RadioButton
                android:id="@+id/rb_female"
                android:paddingStart="@dimen/dp_6"
                android:layout_marginStart="@dimen/dp_15"
                android:textColor="@color/black"
                android:text="@string/female"
                android:textSize="@dimen/sp_15"
                android:fontFamily="@font/inter_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/cb_selector"/>
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_number"
            android:textColor="@color/black"
            android:fontFamily="@font/inter_medium"
            android:textSize="@dimen/sp_12"
            android:layout_marginTop="@dimen/dp_15"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/dp_5"
            android:background="@drawable/bg_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            app:hintEnabled="false">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_phone"
                android:textSize="@dimen/sp_14"
                android:padding="@dimen/dp_10"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:fontFamily="@font/inter_regular"
                android:inputType="phone"
                android:digits="0123456789"
                android:hint="@string/contact_number"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:background="@android:color/transparent"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_address"
            android:textColor="@color/black"
            android:fontFamily="@font/inter_medium"
            android:textSize="@dimen/sp_12"
            android:layout_marginTop="@dimen/dp_15"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/dp_5"
            android:background="@drawable/bg_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            app:hintEnabled="false">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:textSize="@dimen/sp_14"
                android:padding="@dimen/dp_10"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/email"
                android:layout_width="match_parent"
                android:inputType="textEmailAddress"
                android:layout_height="@dimen/dp_50"
                android:background="@android:color/transparent"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/black"
            android:fontFamily="@font/inter_medium"
            android:textSize="@dimen/sp_12"
            android:layout_marginTop="@dimen/dp_15"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/dp_5"
            android:background="@drawable/bg_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            app:hintEnabled="false">
            <com.google.android.material.textfield.TextInputEditText
                android:inputType="textPassword"
                android:id="@+id/et_pw"
                android:textSize="@dimen/sp_14"
                android:padding="@dimen/dp_10"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/enter_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:background="@android:color/transparent"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:textColor="@color/black"
            android:fontFamily="@font/inter_medium"
            android:textSize="@dimen/sp_12"
            android:layout_marginTop="@dimen/dp_15"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/dp_5"
            android:background="@drawable/bg_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            app:hintEnabled="false">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_country"
                android:textSize="@dimen/sp_14"
                android:padding="@dimen/dp_10"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/country"
                android:layout_width="match_parent"
                android:inputType="text"
                android:layout_height="@dimen/dp_50"
                android:background="@android:color/transparent"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:textColor="@color/black"
            android:fontFamily="@font/inter_medium"
            android:textSize="@dimen/sp_12"
            android:layout_marginTop="@dimen/dp_15"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/dp_5"
            android:background="@drawable/bg_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            app:hintEnabled="false">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_city"
                android:textSize="@dimen/sp_14"
                android:padding="@dimen/dp_10"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/city"
                android:layout_width="match_parent"
                android:inputType="text"
                android:layout_height="@dimen/dp_50"
                android:background="@android:color/transparent"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state"
            android:textColor="@color/black"
            android:fontFamily="@font/inter_medium"
            android:textSize="@dimen/sp_12"
            android:layout_marginTop="@dimen/dp_15"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/dp_5"
            android:background="@drawable/bg_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            app:hintEnabled="false">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_state"
                android:textSize="@dimen/sp_14"
                android:padding="@dimen/dp_10"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/state"
                android:layout_width="match_parent"
                android:inputType="text"
                android:layout_height="@dimen/dp_50"
                android:background="@android:color/transparent"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zipcode"
            android:textColor="@color/black"
            android:fontFamily="@font/inter_medium"
            android:textSize="@dimen/sp_12"
            android:layout_marginTop="@dimen/dp_15"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/dp_5"
            android:background="@drawable/bg_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            app:hintEnabled="false">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_zip"
            android:textSize="@dimen/sp_14"
            android:padding="@dimen/dp_10"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:fontFamily="@font/inter_regular"
            android:inputType="phone"
            android:digits="0123456789"
            android:hint="@string/zipcode"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:background="@android:color/transparent"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/additional_notes_or_requests"
            android:textColor="@color/black"
            android:fontFamily="@font/inter_medium"
            android:textSize="@dimen/sp_12"
            android:layout_marginTop="@dimen/dp_15"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/dp_5"
            android:background="@drawable/bg_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            app:hintEnabled="false">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_des"
                android:textSize="@dimen/sp_14"
                android:padding="@dimen/dp_10"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/additional_notes_or_requests"
                android:layout_width="match_parent"
                android:inputType="text"
                android:layout_height="@dimen/dp_50"
                android:background="@android:color/transparent"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/browse_upload_photos"
            android:textColor="@color/black"
            android:fontFamily="@font/inter_medium"
            android:textSize="@dimen/sp_12"
            android:layout_marginTop="@dimen/dp_15"/>
        <com.google.android.material.textfield.TextInputEditText
            android:layout_marginTop="@dimen/dp_5"
            android:id="@+id/et_photo"
            android:textSize="@dimen/sp_14"
            android:padding="@dimen/dp_10"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:fontFamily="@font/inter_regular"
            android:hint="@string/additional_notes_or_requests"
            android:layout_width="match_parent"
            android:inputType="text"
            android:layout_height="@dimen/dp_50"
            android:background="@drawable/bg_et"/>
        <androidx.cardview.widget.CardView
            android:id="@+id/bt_submit"
            android:layout_marginTop="@dimen/dp_25"
            android:layout_marginBottom="@dimen/dp_15"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            app:cardCornerRadius="@dimen/dp_10"
            app:cardElevation="0dp">
            <RelativeLayout
                android:background="@drawable/bg_bt"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:textAllCaps="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    android:textColor="@color/white"
                    android:fontFamily="@font/inter_semibold"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>